# pretty-template

./: LICENSE  README.md  pretty-template.cabal
examples/: First.hs  test1.pt
src/Text/: PrettyTemplate.hs
src/Text/PrettyTemplate/: Parser.hs  Printer.hs  Syntax.hs
