name:                pretty-template
version:             0.2.0.0
synopsis:            templates fused with pretty printer
homepage:            https://github.com/awto/pretty-template
license:             BSD3
license-file:        LICENSE
author:              Vitaliy Akimov
maintainer:          vitaliy.akimov@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Text.PrettyTemplate
  other-modules:       Text.PrettyTemplate.Parser, 
                       Text.PrettyTemplate.Printer, 
                       Text.PrettyTemplate.Syntax 
  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6, 
                       aeson >=0.8 && <0.9, text >=1.2 && <1.3, 
                       mtl >=2.1 && <2.2, unordered-containers >=0.2 && <0.3, 
                       trifecta >=1.5 && <1.6, parsers >=0.12 && <0.13, 
                       wl-pprint-text >=1.1 && <1.2, 
                       vector >=0.10 && <0.11, hashable >= 1.2 && < 1.3,
                       lens >= 4.9 && < 5, ansi-wl-pprint >= 0.6 && < 0.7,
                       bytestring >= 0.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010

